--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -2,15 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>io.scalecube</groupId>
         <artifactId>scalecube-parent</artifactId>
         <version>1.0.8-SNAPSHOT</version>
     </parent>
-
-    <artifactId>scalecube-services</artifactId>
-    <name>ScaleCube/Services</name>
+    <artifactId>scalecube-utils</artifactId>
+    <name>ScaleCube/Utils</name>
 
     <dependencies>
         <dependency>
@@ -19,19 +17,14 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>scalecube-cluster</artifactId>
-            <version>${project.version}</version>
-        </dependency>
         <!-- Other dependencies -->
         <dependency>
-            <groupId>io.dropwizard.metrics</groupId>
-            <artifactId>metrics-core</artifactId>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
     </dependencies>
 
