Enable continues delivery (#215)
* add travis-settings.xml

* Update travis-settings.xml

fix server id

* Update .travis.yml

deploy maven artifacts on each commit to the master

* Deployment split:

+++ on develop branch: mvn deploy
+++ on master branch: mvn release

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,16 @@ before_install:
 after_success:
   - java -cp ~/codacy-coverage-reporter-assembly-latest.jar com.codacy.CodacyCoverageReporter -l Java -r ./services/target/site/jacoco/jacoco.xml
 
-  
+
+deploy:
+  # deploy snapshots to sonatype
+  - provider: script
+    script: "mvn deploy -DskipTests=true -Dmaven.javadoc.skip=true -B -V -s travis-settings.xml"
+    on:
+      branch: develop
+  # deploy releases
+  - provider: script
+    script: "mvn release:release -DautoVersionSubmodules=true -DscmCommentPrefix='[skip ci]' -DskipTests=true -Dmaven.javadoc.skip=true -B -V -s travis-settings.xml"
+    on:
+      branch: master
+
