--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,9 @@ deploy:
       branch: develop
   # deploy releases
   - provider: script
-    script: "mvn release:prepare release:perform -DautoVersionSubmodules=true -DscmCommentPrefix='[skip ci]' -DskipTests=true -Dmaven.javadoc.skip=true -B -V -s travis-settings.xml"
+    script: 
+    - mvn release:prepare -DautoVersionSubmodules=true -DscmCommentPrefix='[skip ci] [maven-release-plugin]' -DskipTests=true -Dmaven.javadoc.skip=true -B -V -s travis-settings.xml
+    - mvn release:perform
     on:
       branch: master
 
