--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,8 @@ deploy:
     on:
       branch: develop
   - provider: script
-    script:
-    - mvn release:prepare -DautoVersionSubmodules=true -DscmCommentPrefix='[skip ci] [maven-release-plugin]' -DskipTests=true -Dmaven.javadoc.skip=true -B -V -s travis-settings.xml
+    script: 
+    - mvn release:prepare -DautoVersionSubmodules=true -DscmCommentPrefix='[skip ci] [maven-release-plugin]' -DskipTests=true -B -V -s travis-settings.xml
     - mvn release:perform
     on:
       branch: master
-    
