--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,14 @@ before_install:
 - "./src/main/scripts/ci/before-install.sh"
 after_success:
 - java -jar ~/codacy-coverage-reporter-assembly.jar -l Java -r ./services/target/site/jacoco/jacoco.xml
+
+# remove this 
+ 
+script:
+- echo PLEASE DO NOT FORGET TO REMOVE THIS LINE
+
+# up to here
+
 before-deploy:
 - "./src/main/scripts/cd/before-deploy.sh"
 deploy:
