--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ notifications:
 before_install:
 - "./src/main/scripts/ci/before-install.sh"
 - "./src/main/scripts/cd/before-deploy.sh"
+#remove this
+script: true
+# through this line
 after_success:
 - java -jar ~/codacy-coverage-reporter-assembly.jar -l Java -r ./services/target/site/jacoco/jacoco.xml
 deploy:
