Renamed module to streams, renamed ServiceMessage to StreamMessage

--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
         <module>examples</module>
         <module>services</module>
         <module>utils</module>
-        <module>ipc</module>
+        <module>streams</module>
         <module>gateway</module>
     </modules>
 
