--- a/services/pom.xml
+++ b/services/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>scalecube-cluster</artifactId>
             <version>${project.version}</version>
         </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>scalecube-streams</artifactId>
+        <version>${project.version}</version>
+      </dependency>
         <!-- Other dependencies -->
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
