--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <protostuff.version>1.6.0</protostuff.version>
         <protobuf.version>3.4.0</protobuf.version>
         <metrics.version>3.1.2</metrics.version>
-        <jackson-databind.version>2.9.0</jackson-databind.version>
+        <jackson.version>2.9.0</jackson.version>
     </properties>
 
     <modules>
@@ -192,8 +192,13 @@
             <!-- Jackson -->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson-databind.version}</version>
+                <version>${jackson.version}</version>
             </dependency>
 
             <!-- Socketio -->
