--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,8 @@
         <protobuf.version>3.4.0</protobuf.version>
         <metrics.version>3.1.2</metrics.version>
         <jackson.version>2.9.0</jackson.version>
+
+        <skipStressTests>true</skipStressTests>
     </properties>
 
     <modules>
@@ -82,6 +84,7 @@
         <module>utils</module>
         <module>streams</module>
         <module>gateway</module>
+        <module>stresstests</module>
     </modules>
 
     <dependencyManagement>
@@ -358,6 +361,12 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <id>stresstests</id>
+            <properties>
+                <skipStressTests>false</skipStressTests>
+            </properties>
         </profile>
     </profiles>
 
