--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -49,6 +49,13 @@
             <groupId>io.scalecube</groupId>
             <artifactId>socketio</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.asynchttpclient</groupId>
+            <artifactId>async-http-client</artifactId>
+            <version>2.4.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
