--- a/stresstests/pom.xml
+++ b/stresstests/pom.xml
@@ -32,6 +32,12 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>scalecube-streams</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>scalecube-services</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
