--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -56,6 +56,19 @@
             <version>2.4.4</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
