--- a/pom.xml
+++ b/pom.xml
@@ -60,27 +60,50 @@
 		<argLine>-Xms1024m -Xmx2048m</argLine>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<jackson.version>2.9.0</jackson.version>
 		<scalecube.version>1.0.9</scalecube.version>
+		<reactor.version>3.1.6.RELEASE</reactor.version>
 	</properties>
 
 
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/io.projectreactor/reactor-core -->
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-core</artifactId>
+			<version>${reactor.version}</version>
+		</dependency>
+		
+		<!-- Jackson deps -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>scalecube-streams</artifactId>
-			<version>${project.version}</version>
+			<artifactId>scalecube-cluster</artifactId>
+			<version>${scalecube.version}</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>scalecube-testlib</artifactId>
 			<version>${scalecube.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>scalecube-cluster</artifactId>
-			<version>${scalecube.version}</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>io.scalecube</groupId>
 			<artifactId>scalecube-utils</artifactId>
