--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
 		
 		<dependency>
 			<groupId>io.scalecube</groupId>
+			<artifactId>scalecube-cluster</artifactId>
+			<version>${scalecube.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.scalecube</groupId>
 			<artifactId>scalecube-utils</artifactId>
 			<version>1.1.0-SNAPSHOT</version>
 		</dependency>
