--- a/services/pom.xml
+++ b/services/pom.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 	<parent>
-        <artifactId>scalecube-services-parent</artifactId>
-        <groupId>io.scalecube</groupId>
+		<artifactId>scalecube-services-parent</artifactId>
+		<groupId>io.scalecube</groupId>
 		<version>2.0.0-SNAPSHOT</version>
-    </parent>
-	
+	</parent>
+
 	<artifactId>scalecube-services</artifactId>
 	<name>ScaleCube/Services</name>
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>scalecube-services-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>scalecube-cluster</artifactId>
 			<version>${scalecube.version}</version>
 		</dependency>
-	
-		
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>scalecube-utils</artifactId>
 			<version>1.1.0-SNAPSHOT</version>
 		</dependency>
-		
+
 		<!-- Jackson deps -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -47,17 +48,14 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
-				
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>scalecube-testlib</artifactId>
 			<version>${scalecube.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
-		
 
-		
 	</dependencies>
 
 	<build>
@@ -74,7 +72,22 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<compilerArgs>
+						<arg>-proc:none</arg>
+						<arg>-Xlint:unchecked</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
+
+
 </project>
