--- a/services/pom.xml
+++ b/services/pom.xml
@@ -22,6 +22,12 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>scalecube-services-transport</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>scalecube-cluster</artifactId>
 			<version>${scalecube.version}</version>
 		</dependency>
