add tests for payload codec

--- a/rsocket-transport/pom.xml
+++ b/rsocket-transport/pom.xml
@@ -51,5 +51,11 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>scalecube-testlib</artifactId>
+			<version>${scalecube.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
