--- a/rsocket-transport/pom.xml
+++ b/rsocket-transport/pom.xml
@@ -21,6 +21,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>io.scalecube</groupId>
+				<artifactId>scalecube-services-codec</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>io.rsocket</groupId>
 				<artifactId>rsocket-core</artifactId>
 				<version>${rsocket.version}</version>
@@ -41,6 +47,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.scalecube</groupId>
+			<artifactId>scalecube-services-codec</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>io.rsocket</groupId>
 			<artifactId>rsocket-core</artifactId>
 		</dependency>
@@ -50,22 +61,6 @@
 			<artifactId>rsocket-transport-netty</artifactId>
 		</dependency>
 
-		<!-- Jackson deps -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-jsr310</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>scalecube-testlib</artifactId>
